k8s/10-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: comic-sans
spec:
  selector:
    app: auth-service
  ports:
    - port: 3001
      targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: comic-sans
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: comic-sans-backend-auth-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
          resources:
            requests: { memory: 32Mi, cpu: 25m }
            limits:   { memory: 128Mi, cpu: 200m }
