k8s/11-user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: comic-sans
spec:
  selector:
    app: user-service
  ports:
    - port: 3002
      targetPort: 3002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: comic-sans
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: comic-sans-backend-user-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002
          resources:
            requests: { memory: 32Mi, cpu: 25m }
            limits:   { memory: 128Mi, cpu: 200m }
