k8s/12-catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  namespace: comic-sans
spec:
  selector:
    app: catalog-service
  ports:
    - port: 3003
      targetPort: 3003
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service
  namespace: comic-sans
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catalog-service
  template:
    metadata:
      labels:
        app: catalog-service
    spec:
      containers:
        - name: catalog-service
          image: comic-sans-backend-catalog-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3003
          resources:
            requests: { memory: 32Mi, cpu: 25m }
            limits:   { memory: 128Mi, cpu: 200m }
