k8s/13-customer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  namespace: comic-sans
spec:
  selector:
    app: customer-service
  ports:
    - port: 3004
      targetPort: 3004
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service
  namespace: comic-sans
spec:
  replicas: 2
  selector:
    matchLabels:
      app: customer-service
  template:
    metadata:
      labels:
        app: customer-service
    spec:
      containers:
        - name: customer-service
          image: comic-sans-backend-customer-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3004
          resources:
            requests: { memory: 64Mi, cpu: 50m }
            limits:   { memory: 256Mi, cpu: 400m }
