k8s/14-sales-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sales-service
  namespace: comic-sans
spec:
  selector:
    app: sales-service
  ports:
    - port: 3005
      targetPort: 3005
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sales-service
  namespace: comic-sans
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sales-service
  template:
    metadata:
      labels:
        app: sales-service
    spec:
      containers:
        - name: sales-service
          image: comic-sans-backend-sales-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3005
          resources:
            requests: { memory: 64Mi, cpu: 50m }
            limits:   { memory: 256Mi, cpu: 400m }
