k8s/20-tienda-pos.yaml
apiVersion: v1
kind: Service
metadata:
  name: tienda-pos
  namespace: comic-sans
spec:
  selector:
    app: tienda-pos
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tienda-pos
  namespace: comic-sans
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tienda-pos
  template:
    metadata:
      labels:
        app: tienda-pos
    spec:
      containers:
        - name: tienda-pos
          image: comicsans-frontend-tienda-pos:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests: { memory: 16Mi, cpu: 10m }
            limits:   { memory: 64Mi, cpu: 100m }
