k8s/30-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comic-sans
  namespace: comic-sans
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: tienda-admin
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tienda-pos
                port:
                  number: 80
